--- a/frontend/src/components/Shelter/Shelter.css
+++ b/frontend/src/components/Shelter/Shelter.css
@@ -25,12 +25,12 @@
     margin-bottom: 10px;
     color: #333333; 
   }
-  .container p {
+  /* .container p {
     text-align: center;
     font-size: 19px;
     color: #7b7b7b;
     margin-bottom: 8px;
-}
+} */
   
   /* .card-text {
     font-size: 50px; 
