--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -663,19 +663,7 @@ border-radius: 50px;
   transform: translateY(-50%);
 }
 
-.ban_text strong {
-  color: #303030;
-  text-transform: uppercase;
-}
 
-.ban_text strong span {
-  letter-spacing: 3px;
-}
-
-.ban_text p {
-  color: #303030;
-  margin: 7px 0 25px;
-}
 
 .ban_text a {
   display: inline-block;
@@ -685,8 +673,34 @@ border-radius: 50px;
   padding: 12px 28px;
   transition: all 0.3s ease-in-out;
   text-decoration: none;
+  margin-top: 20px;
 }
 
-.ban_text a:hover {
-  background: #50af47;
+.ban_text a:hover,
+.rescue-text  a:hover {
+  background: #ff943c;
+}
+.ban_text h1 {
+  font-size: 45px !important;
+  margin: 0 0 20px  0 !important;
+  text-align: left !important;
+  font-weight: 600 !important;
+  margin-bottom: 20px !important;
+}
+.rescue-text h1{
+  font-size: 45px !important;
+  margin: 0 0 20px  0 !important;
+  text-align: left !important;
+  font-weight: 600 !important;
+  margin-bottom: 20px !important;
+}
+.rescue-text a {
+  display: inline-block;
+  background: #005c57;
+  border-radius: 26px;
+  color: #fff;
+  padding: 12px 28px;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+  margin-top: 20px;
 }
