--- a/frontend/src/components/Job/postanimal.css
+++ b/frontend/src/components/Job/postanimal.css
@@ -37,6 +37,7 @@
   input[type="text"],
   input[type="tel"],
   input[type="email"],
+  input[type="tel"],
   select,
   textarea {
     width: calc(100% - 22px); 
@@ -104,6 +105,9 @@
     width: 100%;
     height: 400px;
   } 
-  
+  .input-box {
+    display: flex;
+    gap: 15px;
+}
   
   
