--- a/frontend/src/components/Adoption/Adoption.css
+++ b/frontend/src/components/Adoption/Adoption.css
@@ -1,17 +1,17 @@
-.paws-banner{
-    background-color: #f7ede0;
-    padding-top: -300px;
-    margin-top: -200px;
-    padding: 200px 0;
+.paws-banner {
+  background-color: #f7ede0;
+  padding-top: -300px;
+  margin-top: -200px;
+  padding: 200px 0;
 }
 
 
 
 .head-sub-text {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 40px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 40px;
 }
 
 .banner-sub-detail .head-sub-text .icon-text {
@@ -24,107 +24,128 @@
 }
 
 .banner-heading h2 {
-    font-size: 62px;
-    font-weight: 500;
-    margin: 0;
+  font-size: 62px;
+  font-weight: 500;
+  margin: 0;
 }
 
 .icon-text h4 {
-    font-size: 17px;
-    font-weight: 600;
-    margin-bottom: 0;
+  font-size: 17px;
+  font-weight: 600;
+  margin-bottom: 0;
 }
 
 .icon-bg {
-    background-color: #ff9600;
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    text-align: center;
-    margin-top: 0;
-    margin-right: 4px;
+  background-color: #ff9600;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  margin-top: 0;
+  margin-right: 4px;
 }
 
 .banner-sub-detail p {
-    text-align: left;
+  text-align: left;
 }
 
-/* adoption page */
-/* .Adoption-List {
-    background-color: #f9f9f9;
-    padding: 50px 0;
-  }
-  
-   .container {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  
-  h2 {
-    text-align: center;
-    margin-bottom: 30px;
-  } 
-  p {
-    text-align: center;
-  }
-  */
- 
-   
- 
-  .adoption-box {
-    background-color: #fae3e3;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 30px;
-    width: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
+
+.adoption_post .container {
+  display: flex;
+}
+
+
+
+.input-style {
+  width: 100% !important;
+  border: 1px solid #ccc !important;
+  color: #787676 !important;
+  padding: 10px !important;
+  border-radius: 5px !important;
+}
+
+.form-side-left {
+  background-color: #005c57;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  margin-right: 20px;
+  width: 560px;
+}
+
+.form-side-left h2 {
+  font-size: 35px;
+  font-family: "Fraunces", serif;
+  margin-bottom: 20px;
+}
+
+.adoption-box {
+  background-color: #fae3e3;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 30px;
+  width: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .container .row .adoption-box .adoption-text-box .iconContainer p {
-    font-size: 14px;
-    display: inline-block;
+  font-size: 14px;
+  display: inline-block;
 }
 
-  .adoption-img {
-    position: relative;
-  }
-   
-  
-  .adoption-img img {
-    width: 100%;
-    border-radius: 5px;
-  }
- 
-  .adoption-text-box {
-    padding-top: 20px;
-    text-align: center;
-  }
-    
-  .adoption-text-box h3 {
-    margin-top: 0;
-    font-size: 20px;
+.adoption-img {
+  position: relative;
 }
-   
+
+
+.adoption-img img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.adoption-text-box {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.adoption-text-box h3 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+input[type="file"]::-webkit-file-upload-button {
+  padding: 10px 20px;
+  background-color: #db753a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="file"]::-webkit-file-upload-button:hover {
+  background-color: #45a049;
+}
+
 .icon-text {
-    display: block;
-    margin-bottom: 10px;
-    margin-right: 13px;
-    /* flex-wrap: nowrap; */
+  display: block;
+  margin-bottom: 10px;
+  margin-right: 13px;
+  /* flex-wrap: nowrap; */
 }
 
-  .icon-bullets {
-    width: 10px;
-    height: 10px;
-    background-color: #d37a27;
-    border-radius: 50%;
-    margin-right: 10px;
-    display: inline-block;
-   
-  }
-   
-  .iconContainer {
-    display: flex;
-    align-items: center;
-  }
+.icon-bullets {
+  width: 10px;
+  height: 10px;
+  background-color: #d37a27;
+  border-radius: 50%;
+  margin-right: 10px;
+  display: inline-block;
+
+}
+
+.iconContainer {
+  display: flex;
+  align-items: center;
+}
